force-app/main/default/objects/Master_Factor__c/Master_Factor__c.object-meta.xml
<CustomObject>
    <description>Object to hold master records of factors involved in calculations.</description>
    <label>Master Factor</label>
    <nameField>
        <label>Master Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>