force-app/main/default/objects/Master_Factor__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipLabel>Master Factors</relationshipLabel>
    <relationshipName>Master_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>