force-app/main/default/objects/Master_Factor__c/fields/Factor_Type__c.field-meta.xml
<CustomField>
    <fullName>Factor_Type__c</fullName>
    <label>Factor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Deductible</fullName>
            </value>
            <value>
                <fullName>AOP</fullName>
            </value>
            <value>
                <fullName>Step Rate</fullName>
            </value>
            <value>
                <fullName>Base Value</fullName>
            </value>
            <value>
                <fullName>GEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>