force-app/main/default/objects/Master_Factor__c/fields/Lowest_Coverage_Count__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Coverage_Count__c</fullName>
    <label>Lowest Limit Count</label>
    <summaryFilterItems>
        <field>ILF_Coverage_Factor__c.Lowest_Coverage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ILF_Coverage_Factor__c.Master_Factor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>