force-app/main/default/objects/Master_Factor__c/fields/Mid_Coverage_Count__c.field-meta.xml
<CustomField>
    <fullName>Mid_Coverage_Count__c</fullName>
    <description>How many count in coverage as Mid coverage mark Yes. There must be one count.</description>
    <label>Mid Limit Count</label>
    <summaryFilterItems>
        <field>ILF_Coverage_Factor__c.Mid_Coverage__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ILF_Coverage_Factor__c.Master_Factor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>