force-app/main/default/objects/Master_Factor__c/fields/Total_Limit_count__c.field-meta.xml
<CustomField>
    <fullName>Total_Limit_count__c</fullName>
    <label>Total Limit count</label>
    <summaryForeignKey>ILF_Coverage_Factor__c.Master_Factor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>