force-app/main/default/objects/Master_Factor__c/recordTypes/Area_of_Practice.recordType-meta.xml
<RecordType>
    <fullName>Area_of_Practice</fullName>
    <active>true</active>
    <label>Area of Practice</label>
</RecordType>