force-app/main/default/objects/Master_Factor__c/recordTypes/Base_Value.recordType-meta.xml
<RecordType>
    <fullName>Base_Value</fullName>
    <active>true</active>
    <label>Base Value</label>
</RecordType>