force-app/main/default/objects/Master_Factor__c/recordTypes/Deductible.recordType-meta.xml
<RecordType>
    <fullName>Deductible</fullName>
    <active>true</active>
    <label>Deductible</label>
</RecordType>