force-app/main/default/objects/Master_Factor__c/recordTypes/GEO_Mode.recordType-meta.xml
<RecordType>
    <fullName>GEO_Mode</fullName>
    <active>true</active>
    <label>Geo Mod</label>
</RecordType>