force-app/main/default/objects/Master_Factor__c/recordTypes/Limit_Coverage.recordType-meta.xml
<RecordType>
    <fullName>Limit_Coverage</fullName>
    <active>true</active>
    <label>Limits</label>
</RecordType>