force-app/main/default/objects/Master_Factor__c/recordTypes/Step_Rate.recordType-meta.xml
<RecordType>
    <fullName>Step_Rate</fullName>
    <active>true</active>
    <label>Step Rate</label>
</RecordType>