force-app/main/default/objects/Master_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cloned_From__c</columns>
    <columns>Default__c</columns>
    <columns>Factor_Type__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>